--- a/app/src/views/home/main.ejs
+++ b/app/src/views/home/main.ejs
@@ -5,11 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <title>롤 전적 검색 OP.GG 로그인</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon (1).ico" />
+    <link rel="stylesheet" href="./src/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/favicon.ico" />
 </head>
 
-<img src="/슉.슈슉.png" />
+<img src="./src/슉.슈슉.png" />
 
 <body>
     <form action="" method="post">
