돔을 이용해 HTML 객체 저장

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <input id="id" type="text" placeholder="아이디"></br>
-    <input id="psword" type="text" placeholder="비밀번호"></br>
+    <input id="email" type="text" placeholder="E-mail"></br>
+    <input id="psword" type="text" placeholder="PassWord"></br>
     <button>로그인</button>
 </body>
 
