--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -11,9 +11,13 @@
 </head>
 
 <body>
-    <input id="email" type="text" placeholder="E-mail"></br>
-    <input id="psword" type="text" placeholder="PassWord"></br>
-    <button>로그인</button>
+    <form>
+        User Email:<br>
+        <input id="email" type="email" placeholder="E-mail"></br>
+        User password:<br>
+        <input id="psword" type="password" placeholder="PassWord"></br>
+        <button>로그인</button>
+    </form>
 </body>
 
 </html>
