백엔드에서 로그인 기능 구현

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -13,7 +13,7 @@
 <body>
     <form>
         User Email:<br>
-        <input id="email" type="email" placeholder="E-mail"></br>
+        <input id="email" type="text" placeholder="E-mail"></br>
         User password:<br>
         <input id="psword" type="password" placeholder="PassWord"></br>
         <button>로그인</button>
