로그인 화면 꾸미기

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -6,18 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="/css/home/login.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/favicon_log.ico" />
     <script src="/js/home/login.js" defer></script>
-    <title>Document</title>
+    <title>MEMBER.OP.GG</title>
 </head>
 
 <body>
-    <form>
-        User Email:<br>
-        <input id="email" type="text" placeholder="E-mail"></br>
-        User password:<br>
-        <input id="psword" type="password" placeholder="PassWord"></br>
-        <button>로그인</button>
-    </form>
+    <div class="login-page">
+
+        <div class="form">
+            <img src="/src/login_icon.jpg">
+            <p></p>
+            <p></p>
+            <form class="login-form">
+                <input id="id" type="text" placeholder="E-mail" />
+                <input id="psword" type="password" placeholder="password" />
+                <button>login</button>
+                <p class="message">OP.GG가 처음이신가요? <a href="/register">회원가입</a></p>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
+
+<!--Copyright (c) 2021 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy)-->
