--- a/app/src/views/home/main.ejs
+++ b/app/src/views/home/main.ejs
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>롤 전적 검색 OP.GG 로그인</title>
-    <link rel="stylesheet" href="./src/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./src/favicon.ico" />
+    <link rel="stylesheet" href="/css/home/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/favicon_main.ico" />
 </head>
 
 <img src="./src/슉.슈슉.png" />
