--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -1,8 +1,8 @@
 <!--
 	  ,ad8888ba,   88888888ba         ,ad8888ba,    ,ad8888ba,
-	 d8"'    `"8b  88      "8b       d8"'    `"8b  d8"'    `"8b
-	d8'        `8b 88      ,8P      d8'           d8'
-	88    로     88 88aaaaaa8P'      88    그       88   인
+	 d8"'    `"8b  88 원    "8b       d8"'    `"8b  d8"'    `"8b
+	d8'        `8b 88      ,8P      d8'   가       d8'   입
+	88   회      88 88aaaaaa8P'      88            88
 	88          88 88""""""'        88      88888 88      88888
 	Y8,        ,8P 88               Y8,        88 Y8,        88
 	 Y8a.    .a8P  88                Y8a.    .a88  Y8a.    .a88
@@ -33,9 +33,11 @@
             <p></p>
             <form class="login-form">
                 <input id="id" type="text" placeholder="아이디" />
+                <input id="name" type="text" placeholder="이름" />
                 <input id="psword" type="password" placeholder="비밀번호" />
-                <button>login</button>
-                <p class="message">OP.GG가 처음이신가요? <a href="/register">회원가입</a></p>
+                <input id="confirm-psword" type="password" placeholder="비밀번호 확인" />
+                <button>가입하기</button>
+                <p class="message">이미 회원이신가요? <a href="/login">로그인</a></p>
             </form>
         </div>
     </div>
