회원가입 요청 구현

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -34,7 +34,7 @@
             <form class="login-form">
                 <input id="id" type="text" placeholder="아이디" />
                 <input id="psword" type="password" placeholder="비밀번호" />
-                <button>login</button>
+                <p id="button">login</p>
                 <p class="message">OP.GG가 처음이신가요? <a href="/register">회원가입</a></p>
             </form>
         </div>
