--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="/css/home/login.css">
     <link rel="shortcut icon" type="image/x-icon" href="./src/favicon_log.ico" />
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>MEMBER.OP.GG</title>
 </head>
 
@@ -36,7 +36,7 @@
                 <input id="name" type="text" placeholder="이름" />
                 <input id="psword" type="password" placeholder="비밀번호" />
                 <input id="confirm-psword" type="password" placeholder="비밀번호 확인" />
-                <button>가입하기</button>
+                <p id="button">가입하기</p>
                 <p class="message">이미 회원이신가요? <a href="/login">로그인</a></p>
             </form>
         </div>
